<resources>
	<string name="app_name">RailwayReservation</string>
	<string name="password">Password</string>
	<string name="login">Login</string>
	<string name="create_account">Create Account</string>
	<string name="email">Email</string>
	<string name="name">Name</string>
	<string name="confirm_password">Confirm Password</string>
	<string name="phone_number">Phone Number</string>
	<string name="address">Address</string>
	<string name="profile">Profile</string>
	<string name="logout">Logout</string>
	<string name="add_train">Add Train</string>
	<string name="train_number">Train Number</string>
	<string name="train_name">Train Name</string>
	<string name="source">Source</string>
	<string name="dept_date">Dept Date</string>
	<string name="dept_time">Dept Time</string>
	<string name="destination">Destination</string>
	<string name="arr_date">Arr Date</string>
	<string name="arr_time">Arr Time</string>
	<string name="number_of_seats">Number of Seats</string>
	<string name="seat_type">Seat Type</string>
	<string name="fare">Fare</string>
	<string name="no_trains_found">No Trains Found</string>
    <string name="BookTicket">Book Ticket</string>
</resources>